Optimized font to avoid flickering

--- a/packages/website-next/styles/project-ui.scss
+++ b/packages/website-next/styles/project-ui.scss
@@ -1,3 +1,9 @@
+@use '@fontsource/poppins/scss/mixins' as Poppins;
+
+@include Poppins.fontFace($weight: 300, $display: auto, $fontDir: '~@fontsource/poppins/files');
+@include Poppins.fontFace($weight: 400, $display: auto, $fontDir: '~@fontsource/poppins/files');
+@include Poppins.fontFace($weight: 700, $display: auto, $fontDir: '~@fontsource/poppins/files');
+
 @import './vars';
 
 // include this if this is a third-party project
